[package]
name = "yrs-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.yrs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "merge_v1"
path = "fuzz_targets/merge_v1.rs"
test = false
doc = false

[[bin]]
name = "merge_v2"
path = "fuzz_targets/merge_v2.rs"
test = false
doc = false
